# bevy_shaders

./: Cargo.toml
assets/shaders/: 01_crosshair.wgsl  02_shield.wgsl  03_uv.wgsl  04_dissolve.wgsl  05_fire.wgsl  06_color_change.wgsl  07_randomness.wgsl  08_frame_animation.wgsl  09_orbit.wgsl  10_shine.wgsl  11_reload.wgsl  12_stamina.wgsl  13_liquid.wgsl  14_flag.wgsl  15_matrix.wgsl  16_fake_3d.wgsl  17_model.wgsl  18_dungeon_lights.wgsl  19_grass.wgsl  20_canvas_intro.wgsl  21_magnify.wgsl  22_tv.wgsl  circle_material.wgsl
src/: canvas_into.rs  color_change.rs  crosshair.rs  dev_ui.rs  dissolve.rs  dungeon_lights.rs  fake_3d.rs  fire.rs  flag.rs  frame_animation.rs  grass.rs  liquid.rs  magnify.rs  main.rs  matrix.rs  model.rs  oribit.rs  randomness.rs  reload.rs  shield.rs  shine.rs  stamina.rs  tv.rs  uv.rs
